# cursesfun

./: CMakeLists.txt  conanfile.txt
src/: main.cpp  mypkg.cpp
